fix spacing between cards and spacing between title

--- a/src/Pages/Projects/Projects.scss
+++ b/src/Pages/Projects/Projects.scss
@@ -5,6 +5,10 @@
     flex-direction: column;
     gap: 2rem;
 
+    @include tablet-small{
+        gap: 5rem;
+    }
+
     @include desktop-large{
         margin-bottom: 12rem;
     }
